<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Logout"</string>
    <string name="remark">"Remark:"</string>
    <string name="less">"Less sugar, less salt, less spicy…"</string>
    <string name="min">"-"</string>
    <string name="plus">"+"</string>
    <string name="add_to_cart">"Add to cart"</string>
    <string name="zero">"0"</string>
</resources>